# llvm_build_utils.rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: build_test.rs  rdrand.ll  rdseed.ll  test.bc  test.ll
